fix: use custom scrollbar for properties

--- a/apps/web/src/components/scroll-container/style.css
+++ b/apps/web/src/components/scroll-container/style.css
@@ -14,5 +14,5 @@
 }
 
 .ScrollbarsCustom-Thumb.ScrollbarsCustom-ThumbY {
-  background-color: var(--bgSecondary) !important;
+  background-color: var(--bgSecondaryText) !important;
 }
